yaml/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-service
  namespace: logging
spec:
  type: LoadBalancer
  ports:
  - port: 9200
    targetPort: 9200
  selector:
    app: elasticsearch
